methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:8: error: not found: value NORTH
{if (getDirection == NORTH) {return true}
                     ^MethodsArgs:11: error: not found: type int
def nbspas():int = {7 - getY }
             ^